--- a/exam/question11.tex
+++ b/exam/question11.tex
@@ -89,7 +89,10 @@ $\widehat{a}\widehat{b}=\widehat{e}$
 $F$ порождается $A$
 \item Доказать $t(\overline{a})=s(\overline{a})\in X$
 
-$h(t(a_1,...,a_n))=t(h(a_1),...,h(a_n))=s(h(a_1),...,h(a_n))=h(s(a_1,...,a_n))$
+\begin{multline*}
+h(t(a_1,...,a_n))=t(h(a_1),...,h(a_n))=s(h(a_1),...,h(a_n))\\
+=h(s(a_1,...,a_n))
+\end{multline*}
 $t(\overline{a})\equiv s(\overline{a})\Rightarrow \widehat{t(\overline{a})}=widehat{s(\overline{a})}\Rightarrow t(\widehat{a_1},...,\widehat{a_n})=s(\widehat{a_1},...,\widehat{a_n}$
 \item Из чего следует?
 \end{enumerate}
