--- a/exam/question3.tex
+++ b/exam/question3.tex
@@ -2,7 +2,50 @@
 
 \begin{document}
 \section{Гомоморфизмы, гомоморфные образы,\\ конгруэнтности, фактор-алгебры}
-%% my chapter 1 content
-%%
-%% more of my chapter 1 content
+\begin{dfn}[Гомоморфизм]
+Отображение $f \colon G_1 \to G_2$ называется гомоморфизмом групп $(G_1,*), ~(G_2,\times)$, если оно одну групповую операцию переводит в другую: $f(a*b)=f(a)\times f(b),\, a,b\in G_1$.
+\end{dfn}
+\begin{dfn}[Мономорфизм]
+Инъективный (разнозначный) гомоморфизм
+\end{dfn}
+\begin{exm}[Пример на мономорфизм]
+
+\end{exm}
+\begin{dfn}[Эпиморфизм]
+сюръективный гомоморфизм
+\end{dfn}
+\begin{exm}[Пример на Эпиморфизм]
+
+\end{exm}
+\begin{dfn}[Изоморфизм]
+взаимно однозначный (биективный) гомоморфизм
+\end{dfn}
+\begin{exm}[Пример на Изоморфизм]
+
+\end{exm}
+\begin{dfn}[Эндоморфизм]
+гомоморфизм в само множество
+\end{dfn}
+\begin{exm}[Пример на Эндоморфизм]
+
+\end{exm}
+\begin{dfn}[Автоморфизм]
+взаимно однозначный гомоморфизм в само множество
+\end{dfn}
+\begin{exm}[Пример на Автоморфизм]
+
+\end{exm}
+\begin{dfn}[Гомоморфный образ]
+Образ гомоморфизма
+\end{dfn}
+\begin{exm}[Пример на гомоморфный образ]
+
+\end{exm}
+\begin{dfn}[Конгруэнтность]
+Отношение эквивалентности (рефликсивность, симметричность, транзитивность), сохраняющееся при основных операциях, то есть 
+$$a_1\equiv a_2,\, b_1\equiv b_2\Rightarrow a_1\cdot b_1\equiv a_2\cdot b_2$$
+\end{dfn}
+\begin{dfn}[Фактор-алгебра]
+Множество классов эквивалентности по отношению к конгруэнтности
+\end{dfn}
 \end{document}
