--- a/exam/question6.tex
+++ b/exam/question6.tex
@@ -24,10 +24,10 @@ h(u)*h(v)=h(a_1...a_n)*h({a'}_1...{a'}_n)=\\
 \end{thm}
 \begin{exm}[Примеры свободных моноидов и их гомоморфных образов]
 
-Пусть дан алфавит $A=\{1\}$, который образует $A^*=\{\varepsilon,1,11,...\}$ и моноид $\mathcal{A}=(A^*;\&,\varepsilon)$, тогда
+Пусть дан алфавит $A=\{1\}$, который образует множество слов $A^*=\{\varepsilon,1,11,...\}$ и моноид $\mathcal{A}=(A^*;\&,\varepsilon)$, тогда
 \begin{enumerate}
-\item $mathcal{B}=({1};\cdot,1)$, порождённый элементами $A$ является гомоморфным образом $\mathcal{A}$, $h:A\rightarrow B$, $h(1...1)=1$
-\item $mathcal{C}=(\omega;+,0)$, порождённый элементами $A$(натуральные числа можно получить сложением единицы) является гомоморфным образом $\mathcal{A}$, $h:A\rightarrow B$, $h(\underbrace{1...1}_n)=n$
+\item $\mathcal{B}=({1};\cdot,1)$, порождённый элементами $A$ является гомоморфным образом $\mathcal{A}$, $h:A\rightarrow B$, $h(1...1)=1$
+\item $\mathcal{C}=(\omega;+,0)$, порождённый элементами $A$(натуральные числа можно получить сложением единицы) является гомоморфным образом $\mathcal{A}$, $h:A\rightarrow B$, $h(\underbrace{1...1}_n)=n$
 \end{enumerate}
 \end{exm}
 
@@ -88,6 +88,17 @@ x+y&=k, & k&=i+(k-i\cdot z+r\\
 & & a^k&=a^{i+z}
 \end{align*}
 $$a^{x+y}=a^k=a^{i+(x+y-i)mod(j-i)}$$
+
+\end{proof}
+\end{thm}
+
+\begin{dfn}[Моноид типа $(i,j-i)$]
+Моноид типа $(i,j-i)$ - моноид с элементами $$???$$
+\end{dfn}
+
+\begin{thm}
+В моноиде типа $(i,j-i)$, где $i>0$ существует идемпотент $b\neq e$
+\begin{proof}
 
 \end{proof}
 \end{thm}
