--- a/exam/question9.tex
+++ b/exam/question9.tex
@@ -69,7 +69,7 @@ $A\cap A^{-1}=e$, этого не может быть, $(\mathcal{A};\cap,e)$ - 
 \end{proof}
 Является ли группой алгебра $(\mathcal{A};\dotminus)$, где $\mathcal{A}$ - множество фигур на плоскости.
 \begin{proof}
-Сперва докажим ассоциативность $\dotminus$: $A\dotminus (B\dotminus C)=(A\dotminus B)\dotminus C$
+Сперва докажем ассоциативность $\dotminus$: $A\dotminus (B\dotminus C)=(A\dotminus B)\dotminus C$
 
 $A\dotminus B=(\overline{A}\cap B)\cup(\overline{B}\cap A)$
 
