--- a/main/document.tex
+++ b/main/document.tex
@@ -1,5 +1,9 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[a5paper,10pt]{article}
+\usepackage{titlesec}
+
+
 \usepackage{../main/mystyle}
+
 \begin{document}
 
 \tableofcontents
