--- a/exam/question5.tex
+++ b/exam/question5.tex
@@ -95,7 +95,7 @@ $$((f\circ g)h)(a)=(f(g\circ h))(a)$$
 $(\omega;+)$ - $0$
 \end{exm}
 
-\begin{dfn}[Обратный элемент]$ $\\
+\begin{dfn}[Обратный элемент]
 
 $b_l$ - левый обратный для элемента $a$, если $b_l*a=e$,
 
