Added theorems and definitions to 16th chapter
bezout, multiplicity, deriviateive, all that

--- a/exam/question15.tex
+++ b/exam/question15.tex
@@ -2,10 +2,10 @@
 
 \begin{document}
 \section{Евклидовы кольца, кольца главных идеалов, факториальные кольца}
-\begin{dfn}[Евклидово кольцо]
+\begin{dfn}[Евклидово кольцо]\label{euclidean-ring}
 $R$ - ассоциативное, коммутативное кольцо с единицей, $R$ - евклидово, если для каждого элемента $a$ этого кольца существует его норма $\Vert a\Vert$.
 \end{dfn}
-\begin{dfn}[Евклидова норма]
+\begin{dfn}[Евклидова норма]\label{euclidean-norm}
 Это некоторая функция элемента кольца, такая что
 \begin{enumerate}
 \item $\Vert a\Vert \in \omega$
