Added some theorems to 17 and somewhat fixed encoding

--- a/exam/question17.tex
+++ b/exam/question17.tex
@@ -3,14 +3,49 @@
 \begin{document}
 \section{Простые поля, расширения полей, поле разложения многочлена}
 \begin{dfn}[Простое поле]
-Поле -простое, если оно не содержит собственных подполей
+Поле - простое, если его подалгебры не являются полями
 \end{dfn}
 \begin{dfn}[Собственное подполе]
 \end{dfn}
 \begin{thm}
-$F$ - простое поле, тогда $F\simeq Q$ или $F\simeq \mathcal{Z}_p$
+Любое просто поле изоморфно либо рациональным числам или полю вычетов по простому числу, то есть
+$F$ - простое поле, тогда $F\simeq Q$ или $F\simeq \mathbb{Z}_p$, где $p\in\mathbb{Z}$ - простое
 \begin{proof}
+В поле есть $1$, поэтому можно строить кратные суммы единиц $(1+..+1)$. Строя такие суммы  мы или никогда не получим $0$ или получим
+\begin{enumerate}
+\item Никогда не получится $0$, то есть $k\cdot 1\neq 0\,(-(k\cdot 1)\neq 0)$ при $k>0$.
 
+В поле для любого элемента есть обратный: $(k\cdot 1)^{-1}$ и $-(k\cdot 1)^{-1}$. В поле можно умножать: $(m\cdot 1)(k\cdot 1)^{-1}$. Так можно заметить что все элементы имеют вид
+\begin{align*}
+m\cdot 1&=(m\cdot 1)(1\cdot 1)^{-1}\\
+k\cdot 1&=(1\cdot 1)(k\cdot 1)^{-1}
+\end{align*}
+Если $m\neq 0,k\neq 0$, то $(m\cdot 1)(k\cdot 1)^{-1}\neq 0$.
+Так как $\{(m\cdot 1)(k\cdot 1)^{-1}\}$ образует поле и $F$ - простое, то $\{(m\cdot 1)(k\cdot 1)^{-1}\}$ образует всё поле.
+
+Можно построить изоморфизм где $(m\cdot 1)(k\cdot 1)^{-1}\rightarrowtext{h}\frac{m}{k}$. Покажем что это так. Сначала нужно доказать что это гомоморфизм:
+
+Да, это гомоморфизм
+
+Так как поле - это кольцо, для $h$ существует $\Ker h$ и по \ref{kernel-is-ideal} $\Ker h$ - идеал. Так как поле - тело, то по \ref{only-trivial-ideal} существует только два идеала: $F$ и $\{0\}$. Ядро гомоморфизма является одним из этих идеалов, и так как оно не может быть равно всему полю $F$ оно равно $\{0\}$
+Для того чтобы показать что $h$ - изоморфизм, нужно показать что это инъекция и сюръекция
+\begin{enumerate}
+\item Так как $\Ker h=\{0\}$ то по \ref{zero-kernel-injection} $h$ разнозначно
+\item для каждого образа $\frac{m}{k}\in \mathbb{Q}$ есть прообраз $(m\cdot 1)(k\cdot 1)^{-1}\in F$
+\end{enumerate}
+Следовательно $F\simeq \mathbb{Q}$
+\item $k\cdot 1=0$ для некоторого $k>0$
+
+Выберем наименьшее $k>0$ для которого $k\cdot 1=0$. Мы можем получить элементы $0,1,2\cdot 1,3\cdot 1,...,(k-1)\cdot 1$. Докажем от противного что $k$ должно быть простым:
+
+Так как $k$ не простое, то оно раскладывается $k=pq$, где $p,q>1,\,p,q<k$.
+$$0=k\cdot 1=(p\cdot 1)(q\cdot 1)$$
+поскольку $p,q<k$, то
+$$(p\cdot 1)\neq 0\neq (q\cdot 1)$$
+делители нуля. Противоречие, число не составное.
+
+Возьмём $p=k$, $\mathbb{Z}_p=\{0,...,p-1\}$ - это кольцо (ассоциативное, коммутативное, с единицей), остаётся проверить наличие обратного
+\end{enumerate}
 \end{proof}
 \end{thm}
 \begin{cnsq}
@@ -59,4 +94,5 @@ $deg p =n$
 
 \end{proof}
 \end{cnsq}
+
 \end{document}
