--- a/exam/question3.tex
+++ b/exam/question3.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 \section{Гомоморфизмы, гомоморфные образы,\\ конгруэнтности, фактор-алгебры}
-\begin{dfn}[Гомоморфизм]
+\begin{dfn}[Гомоморфизм]\label{homomorphism}
 Отображение $f \colon G_1 \to G_2$ называется гомоморфизмом групп $(G_1,*), ~(G_2,\times)$, если оно одну групповую операцию переводит в другую: $f(a*b)=f(a)\times f(b),\, a,b\in G_1$.
 \end{dfn}
 \begin{dfn}[Мономорфизм]
@@ -48,4 +48,6 @@ $$a_1\equiv a_2,\, b_1\equiv b_2\Rightarrow a_1\cdot b_1\equiv a_2\cdot b_2$$
 \begin{dfn}[Фактор-алгебра]
 Множество классов эквивалентности по отношению к конгруэнтности
 \end{dfn}
+
+
 \end{document}
