Added more theorems to 17

--- a/exam/question14.tex
+++ b/exam/question14.tex
@@ -98,10 +98,10 @@ $I=\Ker h$, где $h:R\to\bigslant{R}{\equiv} $
 
 \end{proof}
 \end{cnsq}
-\begin{dfn}[Простой идеал]
+\begin{dfn}[Простой идеал]\label{prime-ideal}
 Пусть $R$ - ассоциативное, коммутативное кольцо с единицей, тогда $I$ - простой идеал, если $ab\in I\Leftrightarrow a\in I$ или $b\in I$
 \end{dfn}
-\begin{dfn}[Максимальный идеал]
+\begin{dfn}[Максимальный идеал]\label{maximal-ideal}
 Пусть $R$ - ассоциативное, коммутативное кольцо с единицей, тогда $I$ - максимальный идеал, если для любого идеала $J: I\subseteq J, I\neq J$ выполняется $J=R$
 \end{dfn}
 \begin{dfn}[Главный идеал]
