--- a/exam/question15.tex
+++ b/exam/question15.tex
@@ -58,7 +58,7 @@ $$I_0\subseteq I_1\subseteq I_2\subseteq ...$$
 Существует нефакториальное кольцо
 \end{thm}
 
-\begin{thm}
+\begin{thm}\label{ID-properties}
 $R$ - целостное кольцо и $a\neq 0$, Тогда следующие условия эквивалентны
 \begin{enumerate}
 \item $a$ - необратимый
@@ -109,10 +109,12 @@ $$a=p_1p_2...p_rc_r$$
 \end{enumerate}
 \end{proof}
 \end{thm}
-\begin{lemma}
+\begin{lemma}\label{prime-generates-maximal}
 Пусть $I$ - идеал КГИ $R$. Тогда $I$ является максимальным тогда и только тогда когда $I=pR$, где $p$ - простой
 \begin{proof}
+Необходимость. Пусть $I$ - максимальный идеал и $I=pR$ для некоторого $p\in R$. Если $p$ - не простой, тогда $p=ab$, где $a,b$ - необратимые и  $pR\subseteq aR$. Более того $pR\neq aR$, так как $a\in pR$ подразумевало бы $a=pc$ и $p=pcb$, что означало бы что $b$ - обратимый. Также $aR\neq R$ так как $a$ необратим (\ref{ID-properties}). Непростота $p$ противоречит максимольности идеала $I$: нашёлся идеал $I'$ такой что $I\subseteq I'$ и $I'\neq R$ (\ref{maximal-ideal}).
 
+Достаточность. Пусть $p$ - простой элемент и $I_1$ - идеал в $R$, содержащий $I=pR$. Тогда $I_1=qR$ для некоторого $q\in R$ и $p\in I_1$ означает что $p=rq$ для некоторого $r\in R$. Тогда или $q$ или $r$ обратим. В первом случае $I_1=qR=R$ а во втором случае $q=r^{-1}p$ и $q\in pR$, что подразумевает $qR=pR$ и $I_1=I$. Поэтому $I$ - максимальный идеал в $R$ 
 \end{proof}
 \end{lemma}
 
