--- a/exam/question17.tex
+++ b/exam/question17.tex
@@ -44,7 +44,16 @@ $$0=k\cdot 1=(p\cdot 1)(q\cdot 1)$$
 $$(p\cdot 1)\neq 0\neq (q\cdot 1)$$
 делители нуля. Противоречие, число не составное.
 
-Возьмём $p=k$, $\mathbb{Z}_p=\{0,...,p-1\}$ - это кольцо (ассоциативное, коммутативное, с единицей), остаётся проверить наличие обратного
+Возьмём $p=k$, $\mathbb{Z}_p=\{0,...,p-1\}$ - это кольцо (ассоциативное, коммутативное, с единицей), остаётся проверить наличие обратного. Пусть $x\neq 0$ и $x\in \mathbb{Z}_p$, тогда $\Nod(x,p)=1$. Из этого следует что $nx+mp=1$ для некоторых $n,m\in \mathbb{Z}_p$
+\begin{align*}
+nx+mp&=1\\
+(nx+mp)\Mod{p}&=1\Mod{p}\\
+nx\Mod{p}+mp\Mod{p}&=1\\
+nx\Mod{p}&=1\\
+n\Mod{p}\cdot x\Mod{p}&=1\\
+n\Mod{p}\cdot x&=1
+\end{align*}
+$n\Mod{p}$ - обратный для произвольного $x$, соответственно $\mathbb{Z}_p$ - поле.
 \end{enumerate}
 \end{proof}
 \end{thm}
@@ -55,43 +64,96 @@ $$(p\cdot 1)\neq 0\neq (q\cdot 1)$$
 \end{proof}
 \end{cnsq}
 \begin{dfn}[Характеристика поля]
-
+Для некоторого поля $F$ его характеристика это
+\begin{enumerate}
+\item если $k\cdot 1\neq0$ для всех $k>0$, то $0$ - характеристика поля $F$
+\item если $k\cdot 1=0$ для некоторого $k>0$, то $k$ - характеристика поля $F$ ($F$ - поле конечной характеристики)
+\end{enumerate}
 \end{dfn}
 \begin{dfn}[Неразложимый многочлен]
-Неразложимый многочлен - многочлен, который не раскладывается на множители
+Неразложимый многочлен - многочлен, который не раскладывается на множители, ни один из которых не является многочленом нулевой степени.
 \end{dfn}
+\begin{exm}[Пример неразложимого многочлена]
+
+\end{exm}
 \begin{cnsq}
 \begin{enumerate}
 \item Многочлен 1 степени всегда неразложим
 \item Многочлен 2 или 3 степени неразложим $\Leftrightarrow$ не имеет корней
 \item Если многочлен степени большей 3 не разложим, то он не имеет корней
 \end{enumerate}
-\end{cnsq}
-\begin{cnsq}
-Неразложимый многочлены - простые элементы кольца многочленов
-\end{cnsq}
-\begin{thm}
-$R$ - кольцо главных идеалов, $c$ - простой элемент, тогда $cR$ - простой идеал
-\end{thm}
-\begin{cnsq}
-Если $p$ - неразложимый многочлен, тогда порождёныый им мдеал является максимальным
-\end{cnsq}
-\begin{cnsq}
-$\bigslant{F(x)}{\langle p\rangle}$ - поле
-\end{cnsq}
-\begin{thm}
-Для каждого многочлена существует расширение поля, в котором он разложится на линейные множители.
 \begin{proof}
 
 \end{proof}
-\end{thm}
-\begin{cnsq}
-Если $F$ - конечное поле, то поле расширений многочлена $p$ тоже конечно
 \end{cnsq}
-\begin{cnsq}
-$deg p =n$
+\begin{cnsq}\label{irreducible-polynomial}
+Неразложимый многочлены - простые элементы кольца многочленов
 \begin{proof}
 
+\end{proof}
+\end{cnsq}
+\textcolor{red}{
+\begin{thm}\label{prime-generates-prime}
+$R$ - кольцо главных идеалов, $c$ - простой элемент, тогда $cR$ - простой идеал
+\begin{proof}
+Пусть $c$ - простой элемент, допустим что $cR$ - не простой идеал, тогда найдутся $a,b\not\in cR$ такие что $ab\in cR$. Сумма идеалов $dR=aR+cR$ - тоже идеал. Потом я не пойму ПОЧЕМУ.
+\end{proof}
+\end{thm}
+\begin{thm}
+$R$ - кольцо главных идеалов, $I$ - простой идеал, тогда $I$ - максимальный идеал
+\begin{proof}
+Пусть дан простой идеал $I=cR$, дальше магия
+\end{proof}
+\end{thm}}
+\begin{cnsq}
+Если $p$ - неразложимый многочлен, тогда порождённый им идеал является максимальным
+\begin{proof}
+Следует из двух предыдущих и \ref{irreducible-polynomial} или из \ref{prime-generates-maximal} и \ref{irreducible-polynomial}
+\end{proof}
+\end{cnsq}
+\textcolor{red}{
+\begin{cnsq}
+$\bigslant{F[x]}{\langle p\rangle}$ - поле
+\begin{proof}
+Следует из того что факторкольцо по протому элементу - это поле, но здесь такой теоремы (пока) нет
+\end{proof}
+\end{cnsq}}
+\begin{thm}
+Для каждого многочлена существует расширение поля, в котором он разложится на линейные множители.
+\begin{proof}
+Пусть $p(x)\in P[x]$. Индукция по степени многочлена $p$:
+
+Базис. $\deg p=1$. $p(x)=ax+b$ - линейный, то есть уже разложен
+
+Индукционный шаг. Предположим $p$ раскладывается на два многочлена $p=q\cdot s$, тогда по индукционному предположению для этих многочленов существует поле где они разложатся. 
+
+Теперь предположим что $p$ не раскладывается. Построим $\bigslant{F[y]}{\langle p(y)\rangle}=F'$ - расширение $F$. Это будет расширением потому что можно построить изоморфизм $h:F\to F',\,h(y)=y+\langle p(y)\rangle$
+
+Пусть $\alpha = y+\langle p(y)\rangle$ - корень многочлена $p$ в $F'$, тогда
+\begin{align*}
+p(y+\langle p(y)\rangle)&=\sum\limits_{i=0}^np_i(y+\langle p(y)\rangle)^i\\
+&=\sum\limits_{i=0}^np_i(y^i+\langle p(y)\rangle)\\
+&=(\sum\limits_{i=0}^np_iy^i)+\langle p(y)\rangle\\
+&=p(y)+\langle p(y)\rangle\\
+&=0
+\end{align*}
+действительно, $\alpha = y+\langle p(y)\rangle$ - корень многочлена $p$ в $F'$
+\end{proof}
+\end{thm}
+\begin{exm}[Пример расширения поля]
+
+\end{exm}
+\textcolor{red}{
+\begin{cnsq}
+Если $F$ - конечное поле, то поле расширений многочлена $p$ тоже конечно
+\begin{proof}
+По индукции
+\end{proof}
+\end{cnsq}}
+\begin{cnsq}
+Пусть $p\in P[x]$ и $\deg p =n$, тогда количество корней $p$ с учётом кратности будет $\leq n$ и существует поле где оно равно $n$
+\begin{proof}
+Пусть $F'$ - расширение $F$, в над которым многочлен раскладывается на линейные множители. Тогда $p(x)=a_0(x-a_1)^{n_1}...(x-a_k)^{n_k}$. Если $\deg p =n$, то $n_1+...n_k=n$
 \end{proof}
 \end{cnsq}
 
