--- a/main/mystyle.sty
+++ b/main/mystyle.sty
@@ -8,7 +8,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english, russian]{babel}
 \usepackage[left=15mm, top=20mm, right=15mm, bottom=20mm]{geometry}
-\usepackage[usenames,dvipsnames]{color}
+\usepackage[usenames,dvipsnames]{xcolor}
 \usepackage[bookmarksnumbered,backref]{hyperref}
 \hypersetup{
     colorlinks=true,
@@ -78,7 +78,7 @@
 \DeclareMathOperator{\Ker}{Ker}
 \DeclareMathOperator{\stab}{stab}
 \DeclareMathOperator{\orb}{orb}
-
+\newcommand{\Mod}[1]{\ \text{mod}\ #1}
 
 
 %\newenvironment{rcases}
